<resources>
	<string name="app_name">BKBParcial</string>
	<string name="tv_bkb_counter">BKB COUNTER</string>
	<string name="hint_ingrese_nombre">Ingrese nombre</string>
	<string name="tv_equipo_b">Equipo B</string>
	<string name="tv_equipo_a">Equipo A</string>
	<string name="btn_ver_scores_anteriores">VER SCORES ANTERIORES</string>
	<string name="btn_start">START</string>
	<string name="btn_freethrow">Tiro Libre</string>
	<string name="_plus2">+2</string>
	<string name="_plus3">+3</string>
	<string name="tv_counter_default">0</string>
	<string name="btn_fin_de_partido">FIN DE PARTIDO</string>
</resources>
